Remove reference to 'screenshot'.

--- a/website/index.html
+++ b/website/index.html
@@ -137,7 +137,7 @@ ImageView photo = Views.findById(view, R.id.photo);</pre>
             <p>The source code to the library and sample application as well as this website is <a href="http://github.com/JakeWharton/butterknife">available on GitHub</a>.</p>
 
             <h4>Maven</h4>
-            <p>If you are using Maven for compilation you can declare the screenshot library as a dependency.</p>
+            <p>If you are using Maven for compilation you can declare the library as a dependency.</p>
             <pre class="prettyprint">&lt;dependency>
   &lt;groupId>com.jakewharton&lt;/groupId>
   &lt;artifactId>butterknife&lt;/artifactId>
