--- a/website/index.html
+++ b/website/index.html
@@ -117,7 +117,7 @@
             <p>Other provided injection APIs:</p>
             <ul>
               <li>Inject arbitrary objects using an activity as the view root. If you use a pattern like MVC you can inject the controller using its activity with <code>Views.inject(this, activity)</code>.</li>
-              <li>Inject a view's children into fields using <code>`Views.inject(this)</code>. If you use <code>&lt;merge></code> tags in a layout and inflate in a custom view constructor you can
+              <li>Inject a view's children into fields using <code>Views.inject(this)</code>. If you use <code>&lt;merge></code> tags in a layout and inflate in a custom view constructor you can
    call this immediately after. Alternatively, custom view types inflated from
    XML can use it in the <code>onLayoutInflated()</code> callback.</li>
             </ul>
@@ -128,7 +128,7 @@
 TextView firstName = Views.findById(view, R.id.first_name);
 TextView lastName = Views.findById(view, R.id.last_name);
 ImageView photo = Views.findById(view, R.id.photo);</pre>
-            <p>Add a static import for `Views.findById` and enjoy even more fun.</p>
+            <p>Add a static import for <code>Views.findById</code> and enjoy even more fun.</p>
 
             <h3 id="download">Download</h3>
             <p class="downloads">
