--- a/website/index.html
+++ b/website/index.html
@@ -144,6 +144,13 @@ ImageView photo = Views.findById(view, R.id.photo);</pre>
   &lt;version><span class="version"><em>(insert latest version)</em></span>&lt;/version>
 &lt;/dependency></pre>
 
+            <h4 id="ide">IDE Configuration</h4>
+            <p>Some IDEs require additional configuration in order to enable annotation processing.</p>
+            <ul>
+              <li><em>IntelliJ IDEA</em> &mdash; If your project uses an external configuration (like a Maven <code>pom.xml</code>) then annotation processing should just work. If not, try <a href="ide-idea.html">manual configuration</a>.</li>
+              <li><em>Eclipse</em> &mdash; Set up <a href="ide-eclipse.html">manual configuration</a>.</li>
+            </ul>
+
             <h4 id="proguard">ProGuard</h4>
             <p>Butter Knife generates and uses classes dynamically which means that static analysis tools like ProGuard may think they are unused. In order to prevent them from being removed, explicitly mark them to be kept.</p>
             <pre>-dontwarn butterknife.Views$InjectViewProcessor
