Adding super.onDestroyView() to injection reset documentation.

--- a/website/index.html
+++ b/website/index.html
@@ -157,6 +157,7 @@ public void pickDoor(DoorView door) {
   }
 
   @Override void onDestroyView() {
+    super.onDestroyView();
     Views.reset(this);
   }
 }</pre>
