Proguard will obfuscate class names.
Previous proguard example left class names unchouched.

--- a/website/index.html
+++ b/website/index.html
@@ -215,8 +215,33 @@ ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
             <p>Butter Knife generates and uses classes dynamically which means that static analysis tools like ProGuard may think they are unused. In order to prevent them from being removed, explicitly mark them to be kept.
                 To prevent ProGuard renaming classes that use @InjectView on a member field the <code>keepnames</code> option is used.</p>
             <pre>-dontwarn butterknife.internal.**
+-keep class butterknife.** { *; }
 -keep class **$$ViewInjector { *; }
--keepnames class * { @butterknife.InjectView *;}</pre>
+
+-keepclasseswithmembernames class * {
+    @butterknife.InjectView <fields>;
+}
+
+-keepclasseswithmembernames class * {
+    @butterknife.OnClick <methods>;
+}
+	
+-keepclasseswithmembernames class * {
+    @butterknife.OnEditorAction <methods>;
+}
+	
+-keepclasseswithmembernames class * {
+    @butterknife.OnItemClick <methods>;
+}
+
+-keepclasseswithmembernames class * {
+	@butterknife.OnItemLongClick <methods>;
+}
+
+-keepclasseswithmembernames class * {
+    @butterknife.OnLongClick <methods>;
+}
+</pre>
 
             <h3 id="license">License</h3>
             <pre class="license">Copyright 2013 Jake Wharton
