--- a/website/index.html
+++ b/website/index.html
@@ -102,12 +102,12 @@ List&lt;EditText> nameViews;</pre>
             <pre class="prettyprint">ButterKnife.apply(nameViews, DISABLE);
 ButterKnife.apply(nameViews, ENABLED, false);</pre>
             <p><code>Action</code> and <code>Setter</code> interfaces allow specifying simple behavior.</p>
-            <pre class="prettyprint">private static final Action&lt;View> DISABLE = new Action&lt;>() {
+            <pre class="prettyprint">static final Action&lt;View> DISABLE = new Action&lt;>() {
   @Override public void apply(View view, int index) {
     view.setEnabled(false);
   }
 }
-private static final Setter&lt;View, Boolean> ENABLED = new Setter&lt;>() {
+static final Setter&lt;View, Boolean> ENABLED = new Setter&lt;>() {
   @Override public void set(View view, Boolean value, int index) {
     view.setEnabled(value);
   }
