Fixed a compile error in example view holder code

--- a/website/index.html
+++ b/website/index.html
@@ -73,7 +73,7 @@
     holder.name.setText("John Doe");
     // etc...
 
-    return convertView;
+    return view;
   }
 
   static class ViewHolder {
