Blurb about where calling is acceptible.

--- a/website/index.html
+++ b/website/index.html
@@ -86,6 +86,7 @@
   }
 }</pre>
             <p>You can see this implementation in action in the provided sample.</p>
+            <p>Calls to <code>ButterKnife.inject</code> can be made anywhere you would otherwise put <code>findViewById</code> calls.</p>
             <p>Other provided injection APIs:</p>
             <ul>
               <li>Inject arbitrary objects using an activity as the view root. If you use a pattern like MVC you can inject the controller using its activity with <code>ButterKnife.inject(this, activity)</code>.</li>
