--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
 &lt;/dependency></pre>
 
             <h4>Gradle</h4>
-            <pre class="prettyprint">compile 'com.jakewharton:butterknife:<span class="version"><em>(insert latest version)</em></span>'</pre>
+            <pre class="prettyprint">compile 'com.jakewharton.butterknife:<span class="version"><em>(insert latest version)</em></span>'</pre>
             <p>Be sure to supress this lint warning in your <code>build.gradle</code>.</p>
             <pre class="prettyprint">lintOptions {
   disable 'InvalidPackage'
