Fix website typo: supress to suppress

--- a/website/index.html
+++ b/website/index.html
@@ -215,7 +215,7 @@ ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
 
             <h4>Gradle</h4>
             <pre class="prettyprint">compile 'com.jakewharton:butterknife:<span class="version"><em>(insert latest version)</em></span>'</pre>
-            <p>Be sure to supress this lint warning in your <code>build.gradle</code>.</p>
+            <p>Be sure to suppress this lint warning in your <code>build.gradle</code>.</p>
             <pre class="prettyprint">lintOptions {
   disable 'InvalidPackage'
 }</pre>
