--- a/website/ide-eclipse.html
+++ b/website/ide-eclipse.html
@@ -27,7 +27,7 @@
             <h3 id="introduction">Eclipse Configuration</h3>
             <ol>
               <li>
-                <p>Right click on your project in the <em>Package Explorer</em>. Head to <em>Java Compiler &rarr; Annotation Processing</em> and check <em>"Enable project specific settings"</em>.<p>
+                <p>Right click on your project in the <em>Package Explorer</em>, go to <em>Properties</em>, head to <em>Java Compiler &rarr; Annotation Processing</em> and check <em>"Enable project specific settings"</em>.<p>
                 <p>Ensure the other annotation processing settings are the same as shown below:</p>
                 <p><img src="static/ide-eclipse1.png"/></p>
               </li>
