--- a/ide-eclipse.pt_BR.html
+++ b/ide-eclipse.pt_BR.html
@@ -18,26 +18,26 @@
         <div class="span4 side">
           <img src="static/logo.png">
           <h1>Butter Knife</h1>
-          <h2>Field and method binding for Android views</h2>
+          <h2>Binding para campos e métodos para views do Android</h2>
         </div>
         <div class="offset4 span8 main">
           <div class="main-inner">
-            <p><a href="index.html">&laquo; Back to Butter Knife</a></p>
+            <p><a href="index.html">&laquo; voltar para Butter Knife</a></p>
 
-            <h3 id="introduction">Eclipse Configuration</h3>
+            <h3 id="introduction">Configuração no Eclipse</h3>
             <ol>
               <li>
-                <p>Right click on your project in the <em>Package Explorer</em>. Head to <em>Java Compiler &rarr; Annotation Processing</em> and check <em>"Enable project specific settings"</em>.<p>
-                <p>Ensure the other annotation processing settings are the same as shown below:</p>
+                <p>Dê um clique direto no seu projeto no <em>Explorador de pacotes</em>, vá para <em>Propriedades</em>, navegue para <em>compilador Java &rarr; processamento de anotações</em> e marque <em>"Habilitar configurações específicas do projeto"</em>.<p>
+                <p>Garanta que a outra configuração de processamento de anotações são as mesmas que as mostradas abaixo:</p>
                 <p><img src="static/ide-eclipse1.png"/></p>
               </li>
               <li>
-                <p>Expand the <em>Annotation Processing</em> section and select <em>Factory Path</em>. Check <em>"Enable project specific settings"</em> and then click <em>"Add JARs…"</em>. Navigate to the project's <code>libs/</code> folder and select the Butter Knife jar.</p>
+                <p>Expanda a seção de <em>Processamento de Anotações</em> e selecione <em>Factory Path</em>. Marque <em>"Habilitar configurações específicas do projeto"</em> e então clique em <em>"Add JARs…"</em>. Navegue para a pasta <code>libs/</code> do projetoe selecione o jar do Butter Knife.</p>
                 <p><img src="static/ide-eclipse2.png"/></p>
               </li>
-              <li>Click <em>"Ok"</em> to save the new settings. Eclipse will ask you to rebuild your project to which you should click <em>"Yes"</em></li>
-              <li>Make sure that the <code>.apt_generated/</code> folder is in your project root. It should contain files like <code>YOURACTIVITY$$ViewBinder.java</code>. If these files are not present trigger a clean build by selected <em>Project &rarr; Clean</em>. This folder and files should not be checked into revision control.
-              <li>Lastly, under <em>"Java Compiler"</em>, make sure that the <em>Compiler compliance level</em> is set to Java version 1.6 at minimum.</li>
+              <li>Clique em <em>"Ok"</em> para salvar as novas configurações. O Eclipse irá perguntar a você para refazer seu projeto o qual você pode clicar em <em>"Sim"</em></li>
+              <li>Confira se a pasta <code>.apt_generated/</code> está na raíz do seu projeto. Ela pode conter arquivos como <code>YOURACTIVITY$$ViewBinder.java</code>. Se estes arquivos não estiverem presentes trigger a clean build by selected <em>Project &rarr; Clean</em>. Esta pasta e os arquivos podem não ser marcados no controle de revisão.
+              <li>Por último, em <em>"Compilador Java"</em>, confira se o <em>level de conformidade do compilador</em> está definido para a versão 1.6 do Java no mínimo.</li>
             </ol>
 
             <a id="ribbon" href="https://github.com/JakeWharton/butterknife"><img src="static/ribbon.png" alt="Fork me on GitHub"></a>
