ide-idea.pt_BR.html traduzido

--- a/ide-idea.pt_BR.html
+++ b/ide-idea.pt_BR.html
@@ -18,14 +18,14 @@
         <div class="span4 side">
           <img src="static/logo.png">
           <h1>Butter Knife</h1>
-          <h2>Field and method binding for Android views</h2>
+          <h2>Binding para campos e métodos para views do Android</h2>
         </div>
         <div class="offset4 span8 main">
           <div class="main-inner">
-            <p><a href="index.html">&laquo; Back to Butter Knife</a></p>
+            <p><a href="index.html">&laquo; Voltar para Butter Knife</a></p>
 
-            <h3 id="introduction">IntelliJ IDEA Configuration</h3>
-            <p>Open IDEA's preference and navigate to <em>Compiler &rarr; Annotation Processors</em>. Check <em>"Enable annotation processing"</em>.<p>
+            <h3 id="introduction">Configuração do IntelliJ IDEA</h3>
+            <p>Abra as preferências do IDEA e navegue para <em>Compiler &rarr; Annotation Processors</em>. Marque <em>"Habilitar processamento de anotações"</em>.<p>
             <p><img src="static/ide-idea1.png"/></p>
 
             <a id="ribbon" href="https://github.com/JakeWharton/butterknife"><img src="static/ribbon.png" alt="Fork me on GitHub"></a>
