--- a/ide-idea.pt_BR.html
+++ b/ide-idea.pt_BR.html
@@ -22,10 +22,10 @@
         </div>
         <div class="offset4 span8 main">
           <div class="main-inner">
-            <p><a href="index.html">&laquo; Voltar para Butter Knife</a></p>
+            <p><a href="index.pt_BR.html">&laquo; Voltar para Butter Knife</a></p>
 
             <h3 id="introduction">Configuração do IntelliJ IDEA</h3>
-            <p>Abra as preferências do IDEA e navegue para <em>Compiler &rarr; Annotation Processors</em>. Marque <em>"Habilitar processamento de anotações"</em>.<p>
+            <p>Abra as preferências do IDEA e navegue para <em>Compiler &rarr; Annotation Processors</em>. Habilite o processamento de anotações marcando <em>"Enable annotation processing"</em>.<p>
             <p><img src="static/ide-idea1.png"/></p>
 
             <a id="ribbon" href="https://github.com/JakeWharton/butterknife"><img src="static/ribbon.png" alt="Fork me on GitHub"></a>
