Replace old annotation

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
         <div class="offset4 span8 main">
           <div class="main-inner">
             <h3 id="introduction">Introduction</h3>
-            <p>Annotate fields with <code>@Bind</code> and a view ID for Butter Knife to find and automatically cast the corresponding view in your layout.</p>
+            <p>Annotate fields with <code>@BindView</code> and a view ID for Butter Knife to find and automatically cast the corresponding view in your layout.</p>
             <pre class="prettyprint">class ExampleActivity extends Activity {
   @BindView(R.id.title) TextView title;
   @BindView(R.id.subtitle) TextView subtitle;
